--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
     <!-- AngularFire -->
     <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
+    <!--<script src="js/lib/angular/angularfire.min.js"></script>-->
 
     <script src="js/app.js"></script>
     <script src="js/services/authentication.js"></script>
